<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.grupogarcia.coursera.Main2Activity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:id="@+id/muestra1"
        android:textStyle="bold"
        android:textSize="@dimen/tamletra"
        android:layout_marginTop="@dimen/margenes" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:id="@+id/muestra2"
        android:textStyle="bold"
        android:textSize="@dimen/tamletra"
        android:layout_below="@+id/muestra1"
        android:layout_alignStart="@+id/muestra1"
        android:layout_marginTop="@dimen/margenes" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/muestra3"
        android:textStyle="bold"
        android:textSize="@dimen/tamletra"
        android:layout_below="@+id/muestra2"
        android:layout_alignStart="@+id/muestra1"
        android:layout_marginTop="@dimen/margenes" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descrip"
        android:id="@+id/muestra4"
        android:textStyle="bold"
        android:textSize="@dimen/tamletra"
        android:layout_below="@+id/muestra3"
        android:layout_alignStart="@+id/muestra1"
        android:layout_marginTop="@dimen/margenes" />
   <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fech"
        android:id="@+id/muestra5"
        android:textStyle="bold"
        android:textSize="@dimen/tamletra"
        android:layout_below="@+id/muestra4"
        android:layout_alignStart="@+id/muestra1"
        android:layout_marginTop="@dimen/margenes" />
    -->
    <TextView
        android:id="@+id/muestra5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/muestra4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bot2"
        android:id="@+id/edit"
        android:layout_below="@+id/muestra5"
        android:layout_alignEnd="@+id/muestra1" />
</RelativeLayout>
